--- a/plugins/CoreAdminHome/lang/sv.json
+++ b/plugins/CoreAdminHome/lang/sv.json
@@ -113,6 +113,9 @@
         "YouMayOptOut3": "Genom att göra så kommer du skydda din integritet, men kommer även hindra ägaren att lära från dina handlingar och därigenom skapa en bättre upplevelse för dig och andra användare.",
         "UncheckToOptOut": "Avmarkera rutan för att inte vara med.",
         "CheckToOptIn": "Markera rutan för att vara med.",
+        "OptOutErrorNoCookies": "Funktionen för opt-out från spårning kräver att cookies är aktiverade.",
+        "OptOutErrorNotHttps": "Funktionen för opt-out från spårning kanske inte fungerar eftersom denna webbplats inte laddades över HTTPS. Ladda om sidan för att kolla om din opt-out status ändrats.",
+        "OptOutErrorWindowOpen": "Funktionen för opt-out från spårning kanske inte fungerar eftersom det ser ut som att opt-out popupen blockerades. Ladda om sidan för att kolla om din opt-out status ändrats.",
         "MissingTrackingCodeEmailSubject": "Ingen trafik har registrerats i Matomo Analytics för %s , kom igång nu",
         "JsTrackingCodeMissingEmail1": "För några dagar sedan lade du till webbsidan '1%s' till Matomo Analytics. Vi kontrollerade precis och din Matomo ser inte ut att ha någon trafik registrerad för webbsidan.",
         "JsTrackingCodeMissingEmail2": "För att börja spåra data och få insikt om dina användare behöver du starta spårningen på din webbsida eller app. För webbsidor är det bara att lägga till spårningskoden precis innan %s-taggen.",
