--- a/plugins/DevicesDetection/lang/sv.json
+++ b/plugins/DevicesDetection/lang/sv.json
@@ -38,6 +38,7 @@
         "PluginDescription": "Visar utökad information om användarenheter som t.ex. tillverkare, modell, typ av enhet mm.",
         "SmartDisplay": "Smart skärm",
         "Smartphone": "Smartphone",
+        "SmartSpeaker": "Smart högtalare",
         "PortableMediaPlayer": "Portabel mediaspelare",
         "Devices": "Enheter",
         "GenericDevice": "Generell %s",
