--- a/plugins/PrivacyManager/lang/it.json
+++ b/plugins/PrivacyManager/lang/it.json
@@ -28,10 +28,10 @@
         "AskForConsentStep3DescANote2": "Quando stai monitorando più sottodomini nello stesso sito Web in Matomo, vuoi assicurarti che quando chiedi il Consenso, l'utente fornisca il consenso per tutti i sottodomini su cui stai raccogliendo dati. Se l'utente fornisce il consenso solo per un determinato dominio o sottodomino, potrebbe essere necessario limitare o ampliare l'ambito del dominio e del percorso dei cookie di consenso utilizzando 'setCookieDomain' e 'setCookiePath' (ulteriori informazioni nella guida di JavaScript sul tracking).",
         "AskForConsentStep3DescANote3": "È necessario che tu non disabiliti i cookies.",
         "AskForConsentStep3DescB": "B) se si utilizza il proprio strumento di consenso per ricordare il consenso",
-        "AskForConsentStep3DescBDesc1": "In alcuni casi, si registra l'informazione che l'utente ha dato il consenso per essere tracciato direttamente nel proprio sistema o CMS (ad esempio quando si utilizza il proprio cookie per ricordare il consenso dell'utente). Una volta ottenuto il consenso dell'utente per l'elaborazione dei propri dati, è necessario chiamare il metodo 'setConsentGiven':",
-        "AskForConsentStep3DescBDesc2": "Ciò consente al tracker JavaScript di sapere che l'utente ha dato il consenso e garantisce che il tracking funzioni come previsto. Questa funzione deve essere chiamata in qualsiasi momento dopo %1$s.",
+        "AskForConsentStep3DescBDesc1": "In alcuni casi, registri l'informazione che l'utente ha dato il consenso per essere tracciato, direttamente nel proprio sistema o CMS (ad esempio quando si utilizza il proprio cookie per ricordare il consenso dell'utente). Una volta ottenuto il consenso dell'utente per l'elaborazione dei propri dati, è necessario richiamare il metodo 'setConsentGiven':",
+        "AskForConsentStep3DescBDesc2": "Ciò consente al tracker JavaScript di sapere che l'utente ha dato il consenso e garantisce che il tracking funzioni come previsto. Questa funzione deve essere richiamata in qualsiasi momento dopo %1$s.",
         "AskForConsentStep3DescBNote1": "quando chiami, %1$s Matomo non ricorderà nelle successive richieste che questo utente ha dato il consenso: è importante chiamare setConsentGiven in ogni pagina.",
-        "AskForConsentStep3DescBNote2": "quando l'utente ha dato il consenso, puoi anche evitare di chiamare %1$s in primo luogo.",
+        "AskForConsentStep3DescBNote2": "quando l'utente ha dato il consenso, puoi anche evitare di richiamare %1$s in primo luogo.",
         "AskForConsentStep4": "Passo 4: l'utente ritira il consenso",
         "AskForConsentStep4Desc": "Per rimuovere il suo consenso, l'utente deve eseguire un'azione specifica, ad esempio: facendo clic su un pulsante \"Non voglio più essere tracciato\".",
         "AskForConsentStep4DescA": "A) se vuoi lasciare che Matomo ricordi il consenso",
@@ -109,7 +109,7 @@
         "GdprChecklistDesc2": "Di seguito troverai i nostri strumenti che ti consentiranno di assicurare con facilità i diritti dei tuoi utenti e anche l'elenco delle azioni da intraprendere per rendere il tuo utilizzo di Matomo conforme al GDPR e di salvaguardare i tuoi dati. Visita la nostra %1$sGuida per l'Utente GDPR%2$s per saperne di più.",
         "GdprOverview": "Panoramica GDPR",
         "GdprOverviewIntro1": "Il Regolamento Generale sulla Protezione dei Dati (GDPR) è un regolamento che rafforza e unifica la protezione dei dati per tutti gli individui all'interno dell'Unione europea (UE).",
-        "GdprOverviewIntro2": "Se già prendi provvedimenti per garantire che non vengano raccolti dati personali in Matomo, potresti non essere interessato dal GDPR per Matomo (se tracci alcun indirizzo IP, alcun ID utente, alcun dato di geolocalizzazione, ecc.).",
+        "GdprOverviewIntro2": "Se già prendi provvedimenti per garantire che non vengano raccolti dati personali in Matomo, potresti non essere interessato dal GDPR per Matomo (se non tracci alcun indirizzo IP, alcun ID utente, alcun dato di geolocalizzazione, ecc.).",
         "GdprTools": "Strumenti GDPR",
         "GetPurgeEstimate": "Ottieni stima pulizia",
         "IndividualsRights": "Diritti dei singoli",
