--- a/plugins/VisitFrequency/lang/it.json
+++ b/plugins/VisitFrequency/lang/it.json
@@ -7,7 +7,7 @@
         "ColumnAvgActionsPerNewVisit": "Media Azioni per una Nuova Visita",
         "ColumnAvgActionsPerReturningVisit": "Media. Azioni per Visite di Ritorno",
         "ColumnBounceCountForReturningVisits": "Numero Rimbalzi per Visite di Ritorno",
-        "ColumnBounceRateForNewVisits": "Rapporto Rimbalzi per le Nuove Visite",
+        "ColumnBounceRateForNewVisits": "Percentuale di Rimbalzi per le Nuove Visite",
         "ColumnBounceRateForReturningVisits": "Percentuale dei rimbalzi per le Visite di Ritorno",
         "ColumnMaxActionsInReturningVisit": "Numero massimo di azioni in una visita di ritorno",
         "ColumnNbReturningVisitsConverted": "Numero di visite di ritorno convertite",
@@ -19,9 +19,9 @@
         "ColumnNewUsers": "Nuovi Utenti",
         "ColumnReturningUsers": "Utenti di Ritorno",
         "NewActions": "azioni per le nuove visite",
-        "NewAverageVisitDuration": "media durata visita per i nuovi visitatori",
+        "NewAverageVisitDuration": "durata media di una visita per i nuovi visitatori",
         "NewAvgActions": "azioni per nuova visita",
-        "NewBounceRate": "nuove visite hanno rimbalzato (lasciato il sito dopo una pagina)",
+        "NewBounceRate": "nuove visite rimbalzate (che hanno lasciato il sito dopo una pagina)",
         "NewVisits": "nuove visite",
         "PluginDescription": "Restituisce le metriche riguardanti i nuovi visitatori e quelli di ritorno.",
         "ReturnActions": "azioni da visite di ritorno",
