--- a/lang/it.json
+++ b/lang/it.json
@@ -112,7 +112,7 @@
         "Continue": "Continua",
         "ContinueToPiwik": "Vai a Matomo",
         "CurrentlyUsingUnsecureHttp": "Al momento stati utilizzando Matomo in un ambiente non sicuro HTTP. Ciò potrebbe rendere il tuo Matomo vulnerabile agli exploit della sicurezza. Potresti anche violare le leggi sulla privacy, poiché alcune funzionalità, inclusi i cookie di opt-out, non funzioneranno. Ti consigliamo di configurare Matomo per l'utilizzo del protocollo SSL (HTTPS) per una maggiore sicurezza.",
-        "CreationDate": "Data creazione",
+        "CreationDate": "Data di creazione",
         "CreatedByUser": "creato da %s",
         "CurrentMonth": "Mese corrente",
         "CurrentWeek": "Settimana corrente",
