--- a/plugins/Login/lang/sv.json
+++ b/plugins/Login/lang/sv.json
@@ -36,6 +36,7 @@
         "PasswordChanged": "Ditt lösenord har ändrats.",
         "PasswordRepeat": "Lösenord (bekräfta)",
         "PasswordsDoNotMatch": "Lösenorden matchar inte.",
+        "PasswordResetAlreadySent": "Du har begärt för många återställningar av lösenord senaste tiden. En ny begäran kan göras om en timme. Om du har problem med att återställa ditt lösenord, kontakta din administratör för hjälp.",
         "WrongPasswordEntered": "Vänligen ange ditt giltiga lösenord.",
         "ConfirmPasswordToContinue": "Bekräfta ditt lösenord för att fortsätta.",
         "PluginDescription": "Tillhandahåller autentisering med användarnamn och lösenord samt lösenordsåterställning. Autentiseringsmetoden kan anpassas med en annan plugin som t.ex. LoginLdap från marknadsplatsen.",
