--- a/plugins/Actions/lang/el.json
+++ b/plugins/Actions/lang/el.json
@@ -32,6 +32,7 @@
         "ColumnUniqueOutlinks": "Μοναδικοί Εξωτερικοί σύνδεσμοι",
         "ColumnIdPageview": "Αναγνωριστικό εμφάνισης σελίδας",
         "ColumnInteractionPosition": "Θέση Αλληλεπίδρασης",
+        "ColumnPageViewPosition": "Θέση Όψης Σελίδων",
         "ActionsInVisit": "Δραστηριότητες στην επίσκεψη",
         "DownloadsReportDocumentation": "Σε αυτή την αναφορά, μπορείτε να δείτε ποια αρχεία κατέβασαν οι επισκέπτες σας. %s Αυτό που μετράει το Matomo ως λήψη είναι το πάτημα σε σύνδεσμο λήψης. Αν η λήψη ολοκληρώθηκε ή όχι δεν είναι γνωστό στο Matomo.",
         "EntryPagesReportDocumentation": "Η αναφορά περιέχει πληροφορίες για τις σελίδες εισόδου για συγκεκριμένη χρονική περίοδο. Μια σελίδα εισόδου είναι η πρώτη σελίδα που βλέπει ο χρήστης κατά την επίσκεψή του. %s Παρακάτω εμφανίζονται με δομή φακέλων οι διευθύνσεις URL εισόδου.",
