--- a/plugins/Dashboard/lang/fi.json
+++ b/plugins/Dashboard/lang/fi.json
@@ -1,13 +1,13 @@
 {
     "Dashboard": {
         "AddAWidget": "Lisää vimpain",
-        "AddPreviewedWidget": "Klikkaa lisätäksesi vimpaimen työpöydälle",
+        "AddPreviewedWidget": "Napsauta lisätäksesi vimpaimen työpöydälle",
         "ChangeDashboardLayout": "Vaihda työpöydän asettelua",
         "CopyDashboardToUser": "Kopioi työpöytä käyttäjälle",
         "CreateNewDashboard": "Luo uusi työpöytä",
         "Dashboard": "Työpöytä",
         "DashboardCopied": "Nykyinen työpöytä on kopioitu onnistuneesti valitulle käyttäjälle.",
-        "DashboardEmptyNotification": "Työpöytäsi on tyhjä. Voit aloittaa lisäämällä elementtejä tai resetoimalla työpöydän oletusasetuksiin.",
+        "DashboardEmptyNotification": "Työpöytäsi on tyhjä. Voit aloittaa lisäämällä vimpaimia tai palauttamalla työpöydän oletusasetuksiin.",
         "DashboardName": "Työpöydän nimi:",
         "DashboardOf": "Työpöytä: %s",
         "DefaultDashboard": "Oletustyöpöytä - käytössä on oletusvalikoima ja -asettelu",
@@ -18,12 +18,12 @@
         "Maximise": "Suurenna",
         "Minimise": "Pienennä",
         "NotUndo": "Et voi perua tätä operaatiota.",
-        "PluginDescription": "Web-analytiikkojen työpöytä. Muokkaa työpöytääsi lisäämällä uusia osia, siirtämällä osia eri kohtiin, ja vaihtamalla työpöydän sisältöä. Jokainen käyttäjä voi hallita omaa työpöytäänsä.",
+        "PluginDescription": "Web-analytiikkojen työpöytä. Muokkaa työpöytääsi lisäämällä uusia vimpaimia, siirtämällä vimpaimia eri kohtiin, ja vaihtamalla työpöydän sisältöä. Jokainen käyttäjä voi hallita omaa työpöytäänsä.",
         "RemoveDashboard": "Poista työpöytä",
         "RemoveDashboardConfirm": "Haluatko varmasti poistaa työpöydän \"%s\"?",
         "RemoveDefaultDashboardNotPossible": "Oletustyöpöytää ei voi poistaa",
-        "RenameDashboard": "Uudelleenimeä työpöytä",
-        "ResetDashboard": "Nollaa työpöytä",
+        "RenameDashboard": "Nimeä työpöytä uudelleen",
+        "ResetDashboard": "Palauta työpöytä oletusasetuksiin",
         "ResetDashboardConfirm": "Haluatko varmasti palauttaa työpöydän asettelun takaisin oletusasetuksiin?",
         "SelectDashboardLayout": "Valitse uusi työpöydän asettelu",
         "SelectWidget": "Valitse työpöydälle lisättävä vimpain",
