--- a/lang/fi.json
+++ b/lang/fi.json
@@ -233,7 +233,7 @@
         "GoTo2": "Siirry",
         "GraphHelp": "Lisätietoa Matomon kuvaajista.",
         "HelloUser": "Hei, %s!",
-        "Help": "Apua",
+        "Help": "Ohje",
         "HelpResources": "Ohjeresurssit",
         "HelpTranslatePiwik": "Haluatko %1$sauttaa parantamaan Matomon käännöksiä?%2$s?",
         "Hide": "piilota",
@@ -300,7 +300,7 @@
         "NUsers": "%s käyttäjää",
         "NVisits": "%s käyntiä",
         "NUniqueVisitors": "%s uniikia kävijää",
-        "Ok": "Ok",
+        "Ok": "OK",
         "OneAction": "1 toiminto",
         "OneVisit": "1 käynti",
         "OnlyEnterIfRequired": "Kirjoita käyttäjätunnus vain jos SMTP-palvelin vaatii sen",
@@ -343,8 +343,8 @@
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s on saatavissa. Ole hyvä ja ilmoita %2$sMatomo-ylläpitäjälle%3$s.",
         "PiwikXIsAvailablePleaseUpdateNow": "Matomo %1$s on saatavilla. %2$s Päivitä nyt!%3$s (katso %4$s muutokset%5$s).",
         "PleaseContactYourPiwikAdministrator": "Ota yhteyttä Matomo-ylläpitääjäsi.",
-        "PleaseSpecifyValue": "Ole hyvä ja anna arvo kentälle '%s'.",
-        "PleaseUpdatePiwik": "Ole hyvä ja päivitä Matomo",
+        "PleaseSpecifyValue": "Anna arvo kentälle '%s'.",
+        "PleaseUpdatePiwik": "Päivitä Matomo-asennuksesi",
         "Plugin": "Lisäosa",
         "Plugins": "Lisäosat",
         "PoweredBy": "Voimanlähteenä",
