--- a/plugins/CoreHome/lang/fi.json
+++ b/plugins/CoreHome/lang/fi.json
@@ -45,13 +45,13 @@
         "MainNavigation": "Päänavigointi",
         "MakeOneTimeDonation": "Lahjoita kertasumma.",
         "Menu": "Valikko",
-        "NoPrivilegesAskPiwikAdmin": "Olet kirjautuneena sisään käyttäjänä '%1$s', mutta sinulla ei ole mitään oikeuksia Matomo. %2$sPyydä Matomon ylläpitäjää (klikkaa avataksesi sähköpostin)%3$s antamaan katseluoikeudet verkkosivuun.",
-        "OnlyForSuperUserAccess": "Tämä widget näkyy ainoastaan käyttäjille, joilla on superkäyttäjän oikeudet.",
+        "NoPrivilegesAskPiwikAdmin": "Olet kirjautuneena sisään käyttäjänä '%1$s', mutta sinulla ei ole mitään oikeuksia Matomoon. %2$sPyydä Matomon ylläpitäjää (napsauta avataksesi sähköpostin)%3$s antamaan katseluoikeudet verkkosivustoon.",
+        "OnlyForSuperUserAccess": "Tämä vimpain näkyy ainoastaan käyttäjille, joilla on superkäyttäjän oikeudet.",
         "PeriodRange": "Alue",
         "ReportGeneratedOn": "Raportti luotu %s",
         "ReportGeneratedXAgo": "Raportti luotu %s sitten",
-        "SharePiwikLong": "Hei! Löysin juuri hienon maksuttoman ohjelmiston: Matomon!\n\nMatomolla voit seurata verkkosivustosi vierailijoita ilmaiseksi. Kannattaa tutustua!",
-        "SharePiwikShort": "Matomo! Ilmainen ja avoimen lähdekoodin verkkoanalyysi. Hallitse omaa dataasi.",
+        "SharePiwikLong": "Hei! Löysin juuri hienon vapaan ohjelmiston: Matomon!\n\nMatomolla voit seurata verkkosivustosi vierailijoita ilmaiseksi. Kannattaa tutustua!",
+        "SharePiwikShort": "Matomo! Vapaa ja avoimen lähdekoodin verkkoanalyysi. Hallitse omaa dataasi.",
         "ShareThis": "Jaa tämä",
         "ShortcutsAvailable": "Saatavilla olevat oikotiet",
         "ShortcutZenMode": "Zen-tila",
