--- a/plugins/Installation/lang/fi.json
+++ b/plugins/Installation/lang/fi.json
@@ -35,6 +35,7 @@
         "NfsFilesystemWarning": "Palvelimesi käyttää NFS:ää.",
         "NfsFilesystemWarningSuffixAdmin": "Tämä tarkoittaa, että Matomo on todella hidas käytettäessä tiedostopohjaisia sessioita.",
         "NfsFilesystemWarningSuffixInstall": "Tiedostopohjaisten sessioiden käyttäminen NFS:ssä on todella hidasta, joten Matomo käyttää tietokantasessioita. Jos sinulla on monia samanaikaisia ohjauspaneelin käyttäjiä, sinun tarvitsee ehkä lisätä tietokantaserverin käyttäjäyhteyksien maksimimäärää.",
+        "NoConfigFileFound": "Matomon asetustiedostoa ei löytynyt, ja yrität päästä Matomo-sivulle.",
         "YouMayInstallPiwikNow": "Voit %1$sasentaa Matomon nyt%2$s",
         "Optional": "Valinnainen",
         "Password": "Salasana",
@@ -72,6 +73,7 @@
         "SystemCheckDatabaseSSLDisabled": "Tietokantapalvelimellasi ei ole SSL-tukea käytössä",
         "SystemCheckDatabaseSSLNo": "Tietokantapalvelintasi ei ole käännetty SSL-tuella",
         "SystemCheckDatabaseSSLNotWorking": "%s on asetettu arvoon '1', mutta SSL-yhteys ei toimi",
+        "SystemCheckDatabaseSSLOn": "Tietokantasi tukee SSL-yhteyksiä, mutta SSL-yhteyttä ei käytetä. Tarkista tietokantasi SSL-asetukset Matomon asetustiedostosta",
         "SystemCheckDebugBacktraceHelp": "View::factory ei voi luoda näkymää kutsuvalle moduulille.",
         "SystemCheckError": "Tapahtui virhe - täytyy korjata ennen jatkamista",
         "SystemCheckEvalHelp": "Vaaditaan HTML QuickForm - ja Smarty template -järjestelmille",
@@ -103,6 +105,7 @@
         "SystemCheckPhp": "PHP:n versio",
         "SystemCheckPhpPdoAndMysqli": "Lisätietoa: %1$sPHP PDO%2$s ja %3$sMYSQLI%4$s.",
         "SystemCheckSplHelp": "PHP pitää olla asennettuna \"Standard PHP Library (SPL)\"-asetuksen kanssa.",
+        "SystemCheckSettings": "Vaadittu PHP-asetusto (php.ini)",
         "SystemCheckSummaryNoProblems": "Hurraa! Matomon asennuksessa ei ole ongelmia. Taputa itseäsi olkapäälle.",
         "SystemCheckSummaryThereWereErrors": "Oi voi... Matomo on havainnut joitakin %1$skriittisiä ongelmia%2$s asennuksen yhteydessä. %3$sNämä ongelmat tulisi korjata välittömästi.%4$s",
         "SystemCheckSummaryThereWereWarnings": "Järjestelmässä on joitakin ongelmia. Matomo suoritetaan, mutta saatat kokea joitakin pienehköjä ongelmia.",
