--- a/plugins/PrivacyManager/lang/fi.json
+++ b/plugins/PrivacyManager/lang/fi.json
@@ -10,10 +10,16 @@
         "ClickHereSettings": "Muokkaa %s:n asetuksia.",
         "WhenDoINeedConsent": "Milloin minun tulee kysyä käyttäjän hyväksyntää?",
         "HowDoIAskForConsent": "Miten kysyn käyttäjän hyväksyntää?",
+        "AskForConsentFollowSteps": "Seuraa alla olevia ohjeita kysyäksesi käyttäjiltä hyväksynnän, ennen kuin käyttäjiin liittyviä tietoja käsitellään Matomossa.",
         "AskForConsentStep1": "Vaihde 1: vaadi hyväksyntä",
         "AskForConsentStep2": "Vaihe 2: hyväksynnän pyytäminen tietosuojalausekkeen avulla",
         "AskForConsentStep3": "Vaihe 3: käyttäjä antaa hyväksynnän",
+        "AskForConsentStep3DescA": "A) jos haluat Matomon muistavan hyväksynnän",
+        "AskForConsentStep3DescB": "B) jos käytät omaa työkalua hyväksynnän muistamiseen",
         "AskForConsentStep4": "Vaihe 4: käyttäjä poistaa hyväksynnän",
+        "AskForConsentStep4DescA": "A) jos haluat Matomon muistavan hyväksynnän",
+        "AskForConsentStep4DescB": "B) jos käytät omaa työkalua hyväksynnän muistamiseen",
+        "AskForConsentStepNotes": "Huomiot:",
         "AnonymizeIp": "Anonymisoi IP-osoite",
         "AnonymizeLocation": "Anonymisoi sijainti",
         "AnonymizeUserId": "Korvaa käyttäjän ID pseudonyymilla",
@@ -74,6 +80,8 @@
         "ExportSelectedVisits": "Vie valitut käynnit",
         "DeleteSelectedVisits": "Poista valitut käynnit",
         "SelectWebsite": "Valitse sivusto",
+        "MatchingDataSubjects": "Vastaavat tietosubjektit",
+        "VisitsMatchedCriteria": "Nämä vierailut vastaavat valittuja kriteereitä.",
         "GdprToolsPageIntro1": "Tämä sivu on suunniteltu, jotta voit harjoittaa tietojen subjektien oikeuksia.",
         "GdprToolsOverviewHint": "Jos et tiedä mikä EU:n yleinen tietosuoja-asetus eli GDPR on, tutustu %1$sGDPR-yleiskuvaukseen%2$s.",
         "SaveSettingsBeforePurge": "Olet muuttanut tietojen poistamisen asetuksia. Tallenna muutokset ennen jatkamista.",
