--- a/plugins/Tour/lang/fi.json
+++ b/plugins/Tour/lang/fi.json
@@ -8,6 +8,7 @@
         "AddWebsite": "Lisää toinen sivusto",
         "AddReport": "Lisää ajastettu raportti",
         "AddSegment": "Lisää segmentti",
+        "AddAnnotation": "Lisää kommentti",
         "BrowseMarketplace": "Selaa kauppaa",
         "PreviousChallenges": "Aiemmat haasteet",
         "NextChallenges": "Seuraavat haasteet",
