--- a/plugins/TwoFactorAuth/lang/fi.json
+++ b/plugins/TwoFactorAuth/lang/fi.json
@@ -11,6 +11,7 @@
         "AuthenticationCode": "Tunnistautumiskoodi",
         "Verify": "Vahvista",
         "StepX": "Vaihe %s",
+        "MissingAuthCodeAPI": "Määritä kaksivaiheisen tunnistautumisen koodi.",
         "InvalidAuthCode": "Kaksivaiheisen tunnistautumisen koodi ei ollut oikein.",
         "RequiredAuthCodeNotConfiguredAPI": "Sinua vaaditaan määrittämään kaksivaiheinen tunnistautuminen. Kirjaudu tilillesi.",
         "VerifyIdentifyExplanation": "Avaa kaksivaiheisen tunnistautumisen sovellus laitteellasi, katso siitä tunnistautumiskoodi ja varmista henkilöllisyytesi.",
@@ -22,6 +23,7 @@
         "SetupFinishedSubtitle": "Olet ottanut kaksivaiheisen tunnistautumisen käyttöön. Kun kirjaudut seuraavan kerran, sinun tulee kirjoittaa tunnistautumiskoodi. Varmista, että käytettävissäsi on joko mobiililaite tai palautuskoodit.",
         "WarningChangingConfiguredDevice": "Olet aikeissa vaihtaa aiemmin kaksivaiheiseen tunnistautumiseen määritetyn laitteen. Tämä mitätöi kaikki aiemmin määritetyt laitteet.",
         "ShowRecoveryCodes": "Näytä palautuskoodit",
+        "ConfirmSetup": "Vahvista asetukset",
         "NotPossibleToLogIn": "Kirjautuminen Matomo-analytiikkaan ei onnistu",
         "WrongAuthCodeTryAgain": "Kirjoitit väärän tunnistautumiskoodin. Yritä uudelleen.",
         "DisableTwoFA": "Poista kaksivaiheinen tunnistautuminen käytöstä",
