--- a/plugins/UsersManager/lang/fi.json
+++ b/plugins/UsersManager/lang/fi.json
@@ -3,7 +3,8 @@
         "2FA": "2FA",
         "UsesTwoFactorAuthentication": "Käyttää kaksivaiheista tunnistautumista",
         "TwoFactorAuthentication": "Kaksivaiheinen tunnistautuminen",
-        "ResetTwoFactorAuthentication": "Nollaa kaksivaiheinen autentikaatio",
+        "ResetTwoFactorAuthentication": "Nollaa kaksivaiheinen tunnistautuminen",
+        "ResetTwoFactorAuthenticationInfo": "Jos käyttäjä ei voi enää kirjautua sisään kadotettujen palautuskoodien tai hävitetyn tunnistuslaitteen vuoksi, voit nollata kaksivaiheisen tunnistautumisen käyttäjäkohtaisesti, jotta käyttäjät voivat jälleen kirjautua sisään.",
         "AddUser": "Lisää uusi käyttäjä",
         "AddExistingUser": "Lisää olemassa oleva käyttäjä",
         "AddNewUser": "Lisää uusi käyttäjä",
@@ -18,12 +19,14 @@
         "NoTokenCreatedYetCreateNow": "Poletteja ei ole luotu. %1$sLuo uusi poletti nyt%2$s.",
         "TokenSuccessfullyGenerated": "Poletti luotiin onnistuneesti",
         "ConfirmTokenCopied": "Vahvistan kopioineeni poletin.",
+        "GoBackSecurityPage": "Siirry takaisin turvallisuussivulle.",
+        "PleaseStoreToken": "Säilytä polettisi turvallisesti, sillä polettia ei voi näyttää enää uudelleen.",
         "CreateNewToken": "Luo uusi poletti",
         "AnonymousUser": "Anonyymi käyttäjä",
         "AnonymousUserHasViewAccess": "Huom: käyttäjällä %1$s on %2$s pääsy tälle verkkosivulle.",
         "AnonymousUserHasViewAccess2": "Analyysiraporttisi ja kävijätietosi ovat julkisia.",
-        "ApplyToAllWebsites": "Päivitä kaikille sivuille",
-        "ChangeAllConfirm": "Haluatko varmasti antaa käyttäjälle '%s' pääsyn kaikille verkkosivuille?",
+        "ApplyToAllWebsites": "Toteuta kaikkiin sivustoihin",
+        "ChangeAllConfirm": "Haluatko varmasti antaa käyttäjälle '%s' pääsyn kaikille sivustoille?",
         "ClickHereToDeleteTheCookie": "Paina tästä poistaaksesi evästeen, jolloin Matomo alkaa taas seurata käyntejäsi.",
         "ClickHereToSetTheCookieOnDomain": "Paina tästä luodaksesi eväste sivulle %s, jonka jälkeen Matomo ei enää seuraa käyntejäsi sivustolla.",
         "ConfirmGrantSuperUserAccess": "Haluatko varmasti antaa käyttäjälle '%s' pääkäyttäjäoikeudet? Varoitus: käyttäjä saa pääsyn kaikille sivustoille ja voi suorittaa hallinnollisia toimenpiteitä.",
@@ -32,6 +35,7 @@
         "Email": "Sähköposti",
         "EmailYourAdministrator": "%1$sLähetä ylläpitäjällesi sähköpostia ongelmasta%2$s.",
         "EnterUsernameOrEmail": "Kirjoita käyttäjätunnus tai sähköpostiosoite",
+        "ExceptionNoRoleSet": "Roolia ei ole asetettu, mutta jokin näistä tulee asettaa: %s",
         "ExceptionDeleteDoesNotExist": "Käyttäjää '%s' ei ole eikä sitä siksi voida poistaa.",
         "ExceptionDeleteOnlyUserWithSuperUserAccess": "Käyttäjän '%s' poistaminen ei ole mahdollista.",
         "ExceptionEditAnonymous": "Anonyymikäyttäjää ei voi muokata tai poistaa. Se on Matomon sisäinen tunnus käyttäjälle, joka ei ole kirjautunut sisään. Voit esimerkiksi julkaista tilastoja kaikille sallimalla anonyymikäyttäjälle katsomisoikeuden.",
@@ -50,8 +54,10 @@
         "ExceptionNoValueForUsernameOrEmail": "Kirjoita käyttäjätunnus tai sähköpostiosoite.",
         "ExcludeVisitsViaCookie": "Poista käyntiesi seuraaminen evästeellä",
         "ForAnonymousUsersReportDateToLoadByDefault": "Lataa anonyymeille käyttäjille oletuksena",
+        "GiveUserAccess": "Anna käyttäjälle '%1$s' käyttöoikeus %2$s sivustolle %3$s.",
         "GiveViewAccess": "Anna katseluoikeus käyttäjälle %1$s",
         "GiveViewAccessTitle": "Anna olemassaolevalle käyttäjälle oikeus katsoa %s:n raportteja",
+        "IfYouWouldLikeToChangeThePasswordTypeANewOne": "Jos haluat vaihtaa salasanan, kirjoita uusi salasana. Muussa tapauksessa jätä tämä tyhjäksi.",
         "YourCurrentPassword": "Nykyinen salasanasi",
         "CurrentPasswordNotCorrect": "Kirjoittamasi nykyinen salasana ei ole oikein.",
         "ConfirmWithPassword": "Kirjoita salasanasi vahvistaaksesi muutoksen.",
@@ -72,6 +78,7 @@
         "PrivNone": "Ei käyttöoikeutta",
         "PrivView": "Näkymä",
         "PrivViewDescription": "Tämän roolin omaava käyttäjä voi nähdä kaikki raportit.",
+        "RemoveUserAccess": "Poista käyttäjän '%1$s' käyttöoikeus sivustolle %2$s.",
         "ReportDateToLoadByDefault": "Raportin oletuspäiväys",
         "ReportToLoadByDefault": "Oletuksena ladattava raportti",
         "SuperUserAccessManagement": "Hallinnoi pääkäyttäjäoikeuksia",
@@ -79,14 +86,17 @@
         "SuperUserAccessManagementMainDescription": "Pääkäyttäjillä on korkeimmat oikeudet. He voivat suorittaa kaikkia ylläpidollisia toimenpiteitä, kuten lisätä uusia verkkosivuja seurantaan, lisätä käyttäjiä, muuttaa käyttäjien oikeuksia, aktivoida ja poistaa liitännäisiä käytöstä ja asentaa uusia liitännäisiä kauppatorilta.",
         "TheLoginScreen": "Kirjautumisikkuna",
         "ThereAreCurrentlyNRegisteredUsers": "Matomossa on nyt %s rekisteröitynyttä käyttäjää.",
-        "TokenAuth": "API:n autentikointiavain",
+        "TokenAuth": "API:n autentikointipoletti",
         "TokenRegenerateTitle": "Luo uudelleen",
         "TokensSuccessfullyDeleted": "Kaikki poletit poistettiin onnistuneesti",
         "TokenSuccessfullyDeleted": "Poletti poistettiin onnistuneesti",
         "DeleteAllTokens": "Poista kaikki poletit",
+        "ExpiredTokensDeleteAutomatically": "Poletit, joilla on eräpäivä, poistetaan automaattisesti.",
+        "TokensWithExpireDateCreationBySystem": "Eräpäivällä varustettuja poletteja voi tällä hetkellä luoda ainoastaan järjestelmän toimesta",
         "TypeYourPasswordAgain": "Kirjoita uusi salasana uudelleen.",
         "TypeYourCurrentPassword": "Kirjoita nykyinen salasanasi vahvistaaksesi salasanan vaihdon.",
         "User": "Käyttäjä",
+        "UserHasPermission": "Käyttäjällä %1$s on käyttöoikeus %2$s sivustolle %3$s.",
         "UsersManagement": "Käyttäjien hallinta",
         "UsersManagementMainDescription": "Lisää uusia käyttäjiä tai päivitä olemassaolevia. Voit asettaa oikeudet alla.",
         "YourUsernameCannotBeChanged": "Käyttäjätunnusta ei voi vaihtaa.",
@@ -102,7 +112,7 @@
         "RolesHelp": "Roolit määrittävät mitä käyttäjä voi tehdä Matomossa liittyen yksittäiseen sivustoon. Lue lisää %1$sNäkymä-%2$s ja %3$sPääkäyttäjä%4$s-rooleista.",
         "Role": "Rooli",
         "TheDisplayedWebsitesAreSelected": "%1$s näytettyä sivustoa on valittu.",
-        "ClickToSelectAll": "Klikkaa valitaksesi kaikki %1$s.",
+        "ClickToSelectAll": "Napsauta valitaksesi kaikki %1$s.",
         "AllWebsitesAreSelected": "Kaikki %1$s sivustoa on valittu.",
         "ClickToSelectDisplayedWebsites": "Klikkaa valitaksesi %1$s näytettyä sivustoa.",
         "BasicInformation": "Perustiedot",
@@ -139,6 +149,7 @@
         "PasswordChangeNotificationSubject": "Matomo-tilisi salasana on juuri vaihdettu",
         "PasswordChangedEmail": "Salasanasi on vaihdettu. Vaihto toteutettiin seuraavasta laitteesta: %1$s (IP-osoite = %2$s).",
         "NewsletterSignupTitle": "Uutiskirjeen tilaus",
+        "NewsletterSignupMessage": "Tilaa uutiskirje saadaksesi säännöllisesti Matomoon liittyvää tietoa. Voit lopettaa uutiskirjeen tilauksen milloin hyvänsä. Tämä palvelu käyttää MadMimiä. Lisätietoja MadMimistä annetaan %1$stietosuojasivullamme%2$s.",
         "NewsletterSignupFailureMessage": "Hups, jokin meni pieleen. Uutiskirjeen tilaus ei onnistunut.",
         "NewsletterSignupSuccessMessage": "Tilaus onnistui! Olemme yhteydessä pian."
     }
