--- a/plugins/VisitFrequency/lang/fi.json
+++ b/plugins/VisitFrequency/lang/fi.json
@@ -7,6 +7,7 @@
         "ColumnAvgActionsPerNewVisit": "Uusien käyntien toimintojen keskimäärä",
         "ColumnAvgActionsPerReturningVisit": "Palaavien käyntien toimintojen keskimäärä",
         "ColumnBounceCountForReturningVisits": "Ensimmäisen sivun jälkeen poistuneet palaavat kävijät",
+        "ColumnBounceRateForNewVisits": "Lyhyitä käyntejä uusista käynneistä",
         "ColumnBounceRateForReturningVisits": "Lyhyitä käyntejä palaavilta käyttäjiltä",
         "ColumnMaxActionsInReturningVisit": "Suurin määrä toimintoja yhdellä palaavalla käynnillä",
         "ColumnNbReturningVisitsConverted": "Palaavien konvertoitujen käyntien määrä",
@@ -20,6 +21,7 @@
         "NewActions": "toimintoja uusista käynneistä",
         "NewAverageVisitDuration": "uusien käyntien keskimääräinen kesto",
         "NewAvgActions": "toimintoja per uusi käynti",
+        "NewBounceRate": "uutta käyntiä on kimmonnut (lähtenyt sivustolta heti ensimmäisen sivun nähtyään)",
         "NewVisits": "uutta käyntiä",
         "PluginDescription": "Raportoi metriikat ensimmäisen kerran kävijöistä ja palaavista vierailijoista",
         "ReturnActions": "toimintoja palanneissa käynneissä",
