Make it possible to automatically set up geoip2 in installation (#15939)
* make it possible to automatically set up geoip2 in installation

* reenable skipped installation ui tests

* updates expected UI files

* do download in hourly task

* trigger an async run of scheduled tasks to set up geoip2

* directly execute the task if possible and schedule the task only if not

* improve text

* updates UI test

--- a/plugins/GeoIp2/lang/en.json
+++ b/plugins/GeoIp2/lang/en.json
@@ -1,6 +1,8 @@
 {
   "GeoIp2": {
     "AssumingNonApache": "Cannot find apache_get_modules function, assuming non-Apache webserver.",
+    "AutomaticSetup": "Automatically configure geolocation using a dbip database",
+    "AutomaticSetupDescription": "For a proper geolocation Matomo requires an external database. Using this option, Matomo will automatically be configured to download and use the latest dbip city level database. [%1$sView licensing terms%2$s]",
     "CannotFindGeoIPDatabaseInArchive": "No valid DBIP / GeoIP database could be found in tar archive %1$s!",
     "CannotFindGeoIPServerVar": "The %s variable is not set. Your server may not be configured correctly.",
     "CannotListContent": "Couldn't list content for %1$s: %2$s",
